--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <main>
     <div class="container">
         <section class="row">
-            <div class="col-md-8 col-sm-12 p-0 fadeInDown" style="animation-duration: 500ms;"><img src="img/ja.jpg" class="mx-auto img-fluid" alt=""></div>
-            <div class="radius tablet col-md-4 bg-dark text-light text-center p-4 fadeInRight" style="animation-duration: 500ms;"><h1>Jan Przybyło</h1>
+            <div class="col-md-8 col-sm-12 p-0 fadeInDown fastanimation"><img src="img/ja.jpg" class="mx-auto img-fluid" alt=""></div>
+            <div class="radius tablet col-md-4 bg-dark text-light text-center p-4 fadeInRight fastanimation"><h1>Jan Przybyło</h1>
                 <div class="dropdown-divider"></div>
               <p class="p-4">Witam na stronie wizytówce na, której możesz się dowiedzieć najważniejszych informacji o mnie.</p> 
               <div class="contact d-none d-xl-block"><p class="h5">Email:</p>
@@ -36,7 +36,7 @@
                 <h1 class="h1 col-md-12 p-4">Co chcesz wiedzieć?</h1>
                 <div class="btn justify-content-center align-items-center col-md-3 btn-outline-dark"> <p>Edukacja</p> </div><div class="btn d-flex justify-content-center align-items-center  col-md-3 btn-outline-primary">Umiejętności</div><div class="btn d-flex justify-content-center align-items-center btn-outline-primary col-md-3">Zainteresowanie</div><div class="btn d-flex justify-content-center align-items-center btn-outline-primary col-md-3">Kontakt</div>
             </div> -->
-            <div class="list row text-center bg-white p-0 p-md-4 fadeIn" style="animation-duration: 700ms;">
+            <div class="list row text-center bg-white p-0 p-md-4 fadeIn slowanimation">
                 <h1 class="h1 col-md-12 p-4 ">Co chcesz wiedzieć?</h1>
                 <div class="tabbale col-md-12">
                     <ul class="nav nav-tabs ">
@@ -47,52 +47,56 @@
                     </ul>
                     <div class="dropdown-divider d-block d-lg-none"></div>
                     <div class="tab-content">
-                        <div class="tab-pane active animated fadeInUp" style="animation-duration: 500ms;" id="tab1">
+                        <div class="tab-pane active animated fadeInUp fastanimation" id="tab1">
                             <section>
                               <div class="block p-0 p-md-5 bg-white text-left">
-                                <img src="img/teb.png" class="rounded img img-fluid mr-4 mb-3 mb-md-0 animation fadeIn float-left zoomIn" style="animation-duration: 500ms;" alt="">
+                                <img src="img/teb.png" class="rounded img img-fluid mr-4 mb-3 mb-md-0 animation fadeIn float-left zoomIn fastanimation" alt="">
                                 <p class="p-5 mb-4 text">Aktualnie uczęszczam do technikum na kierunku technik informatyk. Skończyłem szkołę podstawową nr. 75 w Poznaniu.</p>
-                                <img src="img/strefa.png" class="rounded img img-fluid animation fadeIn mb-2 mb-md-0 float-right zoomIn" style="animation-duration: 500ms;" alt="">
+                                <img src="img/strefa.png" class="rounded img img-fluid animation fadeIn mb-2 mb-md-0 float-right zoomIn fastanimation" alt="">
                                 <p class="p-5 text">Ukończyłem fundowany przez szkołę kurs stylowania css. Kurs prowadzony był na stronie <a href="strefakursow.pl"> strefakursow.pl</a>.</p>
-                                <img src="img/html.png"  class="rounded img img-fluid mt-5 mb-3 mb-md-0 mr-4 animation fadeIn float-left zoomIn" style="animation-duration: 500ms;" alt="">
+                                <img src="img/html.png"  class="rounded img img-fluid mt-5 mb-3 mb-md-0 mr-4 animation fadeIn float-left zoomIn fastanimation" alt="">
                                 <p class="p-5 mt-4 text">Dużo rzeczy uczę się samemu lub z pomocą tutoriali na internecie. Głównie dokształcam się w programowaniu. Mam w planach nauczyć się C# gdyż zamierzam uczyć się robienia programów Unity. </p>
                               </div>
                             </section>
                         </div>
-                        <div class="tab-pane animated fadeInUp" style="animation-duration: 500ms;" style="animation-duration: 500ms;" id="tab2">
+                        <div class="tab-pane animated fadeInUp fastanimation" id="tab2">
                           <section>
                             <div class=" block p-0 p-md-5 bg-white text-left aling-center">
-                              <img src="img/ct.jpg" class="rounded img img-fluid  animation fadeIn float-left zoomIn" style="animation-duration: 500ms;" alt="">
+                              <img src="img/ct.jpg" class="rounded img img-fluid  animation fadeIn float-left zoomIn fastanimation" alt="">
                               <p class="p-5 text my-2">Zawsze interesowałem się gamedev'em. Moim pierwszym programem na, którym nauczyłem się podstaw działania programów, nazywał się Multimedia Fusion 2. Posługiwałem się tym programem przez kilka lat, robiąc przeróżne gry / programy. Jestem w stanie powiedzieć, że umiem program bardzo dobrze na poziomie zaawansowanym, aczkolwiek dawno się nim nie posługiwałem.</p>
-                              <img src="img/pr.png" class="rounded img img-fluid p-3 animation fadeIn float-right zoomIn" style="animation-duration: 500ms;" alt="">
+                              <img src="img/pr.png" class="rounded img img-fluid p-3 animation fadeIn float-right zoomIn fastanimation" alt="">
                               <p class="p-5 text my-3">Umiem się posługiwać na bardzo dobrym poziomie program Premiere Pro, czyli program do montowania filmów. Programu uczyłem się samemu i z czasem nabrałem wprawy, przez co czuję się jak ryba w wodzie.</p>
-                              <img src="img/gimp.png" class="rounded img img-fluid animation fadeIn float-left zoomIn" style="animation-duration: 500ms;" alt="">
+                              <img src="img/gimp.png" class="rounded img img-fluid animation fadeIn float-left zoomIn fastanimation" alt="">
                               <p class="p-5 text my-3">Gimp, czyli program, który zacząłem się uczyć już w szkole na lekcjach informatyki. Pierwszym zadaniem, które musieliśmy się nauczyć, to było kolorowanie oczu. Po zakończeniu uczenia się w szkole zacząłem się douczać w domu</p>
                             </div>
                           </section>
                         </div>
-                        <div class="tab-pane animated fadeInUp" style="animation-duration: 500ms;" id="tab3">
+                        <div class="tab-pane animated fadeInUp fastanimation" id="tab3">
                           <section>
                             <div class="block p-0 p-md-5 bg-white text-left aling-center">
-                              <img src="img/nasa.png" class="rounded img img-fluid my-2 animation fadeIn float-left zoomIn" style="animation-duration: 500ms;" alt="">
+                              <img src="img/nasa.png" class="rounded img img-fluid my-2 animation fadeIn float-left zoomIn fastanimation" alt="">
                               <p class="p-5 text my-2">Już od młodego interesowałem się astronomią. Mama zawsze kupowała mi filmy, książki oraz prenumeraty związane z astronomią. Od niedawna zacząłem swoje pierwsze obserwacje astronomiczne przy pomocy teleskopu.  </p>
-                              <img src="img/pilka.jpg"  class="rounded img img-fluid animation fadeIn float-right zoomIn" style="animation-duration: 500ms;" alt="">
+                              <img src="img/pilka.jpg"  class="rounded img img-fluid animation fadeIn float-right zoomIn fastanimation" alt="">
                               <p class="p-5 text my-3">Moim ulubionym sportem jest piłka nożna. Moja "kariera" skończyła się tym, że miałem zostać bramkarzem w Warcie Poznań, lecz niestety na mój rocznik mieli już na zapas bramkarzy.</p>
                               
                             </div>
                           </section>
                         </div>
-                        <div class="tab-pane animated fadeInUp" style="animation-duration: 500ms;" id="tab4">
+                        <div class="tab-pane animated fadeInUp fastanimation" id="tab4">
                           <section>
                             <div class="block p-4 bg-white text-center">
                               <h3 class="col-12">Wyślij wiadomość</h3>
+                              <form action="mailto:forkrakers@gmail.com?subject=Mail" method="POST" enctype="multipart/form-data" name="contact-form">
                               <div class="d-md-flex justify-content-center col-md-12">
-                                <input type="email" class="form-control col-md-3 col-xs-12 col-sm-12 mr-md-2 mb-3 " placeholder="przykladowy@email.pl" name="" id="">
-                                <input type="text" class="form-control col-md-3 col-xs-12 col-sm-12 ml-md-2 mt-3 mt-md-0" placeholder="Imie">
+                                <input type="email" name="email" class="form-control col-md-3 col-xs-12 col-sm-12 mr-md-2 mb-3 " placeholder="przykladowy@email.pl" required/>
+                                <input type="text" name="name" class="form-control col-md-3 col-xs-12 col-sm-12 ml-md-2 mt-3 mt-md-0" placeholder="Imie" required/>
                               </div>
-                              <div class="col-3"></div><textarea class="col-md-6 col-11 mt-md-2 mt-xs-4 mt-4 p-1 textarea rounded " name="" id="testing" cols="30" placeholder="Napisz wiadomość.." rows="5"></textarea><div class="col-3"></div>
-                              <input class="btn d-block btn-outline-dark" type="submit" value="Wyślij">
+                              <div class="col-3"></div><textarea class="col-md-6 col-11 mt-md-2 mt-xs-4 mt-4 p-1 textarea rounded" name="comments" id="testing" cols="30" placeholder="Napisz wiadomość.." rows="5" required></textarea><div class="col-3"></div>
+                              <input class="btn d-block btn-outline-dark" type="submit" value="Wyślij"/>
+                              <div class="text-danger"id="send_form_status"></div>
                             </div>
+                            
+                          </form>
                           </section>
                         </div>
                     </div>
@@ -123,7 +127,6 @@
         </footer>
     </div>
     </main>
-
   <!-- jQuery -->
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <!-- Bootstrap tooltips -->
@@ -134,7 +137,6 @@
   <script type="text/javascript" src="js/mdb.min.js"></script>
   <!-- Your custom scripts (optional) -->
   <script type="text/javascript"></script>
-
 </body>
 
 </html>
