--- a/index.html
+++ b/index.html
@@ -25,25 +25,21 @@
                 <div class="dropdown-divider"></div>
               <p class="p-4">Witam na stronie wizytówce na, której możesz się dowiedzieć najważniejszych informacji o mnie.</p> 
               <div class="contact d-none d-xl-block"><p class="h5">Email:</p>
-                <p>mail@mail.com</p>
+                <p id="mail"></p>
                 <p class="mt-2 h5">Telefon:</p>
-                <p>111 222 333</p>
+                <p id="phone"></p>
               </div>
             </div>
         </section>
         <section>
-            <!-- <div class="list row text-center bg-white p-4">
-                <h1 class="h1 col-md-12 p-4">Co chcesz wiedzieć?</h1>
-                <div class="btn justify-content-center align-items-center col-md-3 btn-outline-dark"> <p>Edukacja</p> </div><div class="btn d-flex justify-content-center align-items-center  col-md-3 btn-outline-primary">Umiejętności</div><div class="btn d-flex justify-content-center align-items-center btn-outline-primary col-md-3">Zainteresowanie</div><div class="btn d-flex justify-content-center align-items-center btn-outline-primary col-md-3">Kontakt</div>
-            </div> -->
             <div class="list row text-center bg-white p-0 p-md-4 fadeIn slowanimation">
                 <h1 class="h1 col-md-12 p-4 ">Co chcesz wiedzieć?</h1>
                 <div class="tabbale col-md-12">
                     <ul class="nav nav-tabs ">
-                        <li class="nav-item col-sm-12 col-lg-2"><a href="#tab1" class="active nav-link text-dark " aria-current="page" data-toggle="tab">Edukacja</a></li>
-                        <li class="nav-item col-sm-12 col-lg-2"><a href="#tab2" class="nav-link text-dark" data-toggle="tab">Umiejętności</a></li>
+                        <li class="nav-item col-sm-12 col-lg-3"><a href="#tab1" class="active nav-link text-dark" aria-current="page" data-toggle="tab">Edukacja</a></li>
+                        <li class="nav-item col-sm-12 col-lg-3"><a href="#tab2" class="nav-link text-dark" data-toggle="tab">Umiejętności</a></li>
                         <li class="nav-item col-sm-12 col-lg-3"><a href="#tab3" class="nav-link text-dark" data-toggle="tab">Zainteresowania</a></li>
-                        <li class="nav-item col-sm-12 col-lg-2"><a href="#tab4" class="nav-link text-dark" data-toggle="tab">Kontakt</a></li>
+                        <li class="nav-item col-sm-12 col-lg-3"><a href="#tab4" class="nav-link text-dark" data-toggle="tab">Kontakt</a></li>
                     </ul>
                     <div class="dropdown-divider d-block d-lg-none"></div>
                     <div class="tab-content">
@@ -86,57 +82,38 @@
                           <section>
                             <div class="block p-4 bg-white text-center">
                               <h3 class="col-12">Wyślij wiadomość</h3>
-                              <form action="mailto:forkrakers@gmail.com?subject=Mail" method="POST" enctype="multipart/form-data" name="contact-form">
+                              <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSc9CUQc-IFBlDXeaG2ygZqeJPdeNMmUzg3T5cyAlRcfT7gO5w/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
                               <div class="d-md-flex justify-content-center col-md-12">
-                                <input type="email" name="email" class="form-control col-md-3 col-xs-12 col-sm-12 mr-md-2 mb-3 " placeholder="przykladowy@email.pl" required/>
-                                <input type="text" name="name" class="form-control col-md-3 col-xs-12 col-sm-12 ml-md-2 mt-3 mt-md-0" placeholder="Imie" required/>
+                                <input type="email" name="entry.1742366357" class="form-control col-md-3 col-xs-12 col-sm-12 mr-md-2 mb-3 " placeholder="przykladowy@email.pl" required/>
+                                <input type="text" name="entry.948814897" class="form-control col-md-3 col-xs-12 col-sm-12 ml-md-2 mt-3 mt-md-0" placeholder="Imie" required/>
                               </div>
-                              <div class="col-3"></div><textarea class="col-md-6 col-11 mt-md-2 mt-xs-4 mt-4 p-1 textarea rounded" name="comments" id="testing" cols="30" placeholder="Napisz wiadomość.." rows="5" required></textarea><div class="col-3"></div>
+                              <div class="col-3"></div><textarea class="col-md-6 col-11 mt-md-2 mt-xs-4 mt-4 p-1 textarea rounded" name="entry.1491030676" id="testing" cols="30" placeholder="Napisz wiadomość.." rows="5" required></textarea><div class="col-3"></div>
                               <input class="btn d-block btn-outline-dark" type="submit" value="Wyślij"/>
-                              <div class="text-danger"id="send_form_status"></div>
                             </div>
-                            
                           </form>
+                          <iframe class="text-success" name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
                           </section>
                         </div>
                     </div>
                 </div>
               </div>
-            <!-- <ul class="nav nav-tabs">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#tab1">Edukacja</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#tab2">Umiejętności</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-              </ul> -->
-              
         </section>
         <footer class="d-block d-xl-none list row bg-dark text-light text-center p-4">
           <div><p class="h5">Email:</p>
-            <p>mail@mail.com</p>
+            <p id="mail-mobile"></p>
             <p class="mt-2 h5">Telefon:</p>
-            <p>111 222 333</p>
+            <p id="phone-mobile"></p>
           </div>
         </footer>
     </div>
     </main>
-  <!-- jQuery -->
   <script type="text/javascript" src="js/jquery.min.js"></script>
-  <!-- Bootstrap tooltips -->
   <script type="text/javascript" src="js/popper.min.js"></script>
-  <!-- Bootstrap core JavaScript -->
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
-  <!-- Your custom scripts (optional) -->
-  <script type="text/javascript"></script>
+  <script type="text/javascript">var submitted=false;</script>
+  <script type="text/javascript" src="js/submit.js"></script>
+  <script type="text/javascript" src="js/js.js"></script>
 </body>
 
 </html>
